--- a/Cargo.toml
+++ b/Cargo.toml
@@ -126,6 +126,7 @@ tracing = "0.1"
 tracing-futures = "0.2"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 trust-dns-resolver = "0.21"
+unsigned-varint = { version = "0.7", features = ["std"] }
 url = "2"
 uuid = { version = "1", features = ["v4"] }
 walkdir = "2"
